@startuml network

AbstractDevice <|.. Device
AbstractDevice <|-- Computer
AbstractDevice <|-- Router
Device ..> Location : uses


interface Device {
    + getId() : String
    + getIpAddress() : String
    + setIpAddress(ipAddress : String) : void
    + getMacAddress() : String
    + setMacAddress(macAddress : String) : void
    + getStatus() : boolean
    + setStatus(status : boolean) : void
    + getLocation() : Location
    + setLocation(location : Location) : void
}

abstract class AbstractDevice {
    - id : String
    - ipAddress : String
    - macAddress : String
    - status : boolean
    - location : Location
}

class Location {
    - id : String
    - building : String
    - floor : String
    - room : String
}


class Computer {
}

class Router {
    - model : String
    - firmware : String
    - throughput : int
    - location : Location

}

class Connection {
    - id : String
    - source : Device
    - target : Device
    - type : String
    - bandwidth : int
    - latency : int
    - errorRate : Double

}

@enduml